--- a/css/styles.css
+++ b/css/styles.css
@@ -88,10 +88,10 @@
 
 
 
-#title2 img:hover {
+/* #title2 img:hover {
     transform: scale(1.1);
     transition: 0.2s ease-out;
-}
+} */
 
 .section-p {
     padding: 40px 100px;
@@ -287,7 +287,7 @@
   #title2 {
     display: flex;
     flex-direction: column;
-    padding: 0;
+    padding:0;
   }
 
   .pro-container{
